--- a/SeleniumTest/SeleniumTest.csproj
+++ b/SeleniumTest/SeleniumTest.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0"/>
     <PackageReference Include="coverlet.collector" Version="1.2.0"/>
     <PackageReference Include="Selenium.WebDriver" Version="4.4.0"/>
+    <PackageReference Include="Selenium.Support" Version="4.4.0"/>
   </ItemGroup>
 </Project>
